intermediate/dynamic-block/main.tf
# main.tf
resource "aws_security_group" "example" {
  name = "web-server-rules"

  dynamic "ingress" {
    for_each = var.ingress_rules

    content {
      from_port   = ingress.value.from_port
      to_port     = ingress.value.to_port
      protocol    = ingress.value.protocol
      cidr_blocks = ingress.value.cidr_blocks
    }
  }
}
